--- a/index.html
+++ b/index.html
@@ -10,24 +10,15 @@
     <header>
         <h1>Welcome to Our Company</h1>
     </header>
-    <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
     <section>
-        <h2>About Us</h2>
-        <p>Your company description goes here.</p>
-    </section>
-    <section>
-        <h2>Our Services</h2>
-        <p>Check out the services we offer.</p>
+        <h2>Second Order</h2>
+        <p>Second Order Oy
+PL4, 00521 Helsinki​
+contact@secondorder.com
+VAT FI27159054</p>
     </section>
     <footer>
-        <p>&copy; 2023 Company Name. All Rights Reserved.</p>
+        <p>&copy; 2024 Second Order. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
