--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Company Name</title>
+    <title>Second Order</title>
 </head>
 <body>
     <header>
-        <h1>Welcome to Our Company</h1>
     </header>
     <section>
         <h2>Second Order</h2>
