--- a/index.html
+++ b/index.html
@@ -2,22 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Second Order</title>
+    <title>Second Order Website</title>
+    <style>
+        body {
+            background-color: #1a1a1a; /* Dark background color */
+            color: #ffffff; /* Light text color */
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 50px auto;
+            padding: 0 20px;
+        }
+
+        h1 {
+            font-size: 36px;
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        p {
+            font-size: 18px;
+            line-height: 1.6;
+            text-align: center;
+        }
+
+        a {
+            color: #66ccff; /* Link color */
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        a:hover {
+            color: #ffffff; /* Hover color */
+        }
+    </style>
 </head>
 <body>
-    <header>
-    </header>
-    <section>
-        <h2>Second Order</h2>
-        <p>Second Order Oy
+    
+    <div class="container">
+        <p>VSecond Order Oy
 PL4, 00521 Helsinki​
 contact@secondorder.com
 VAT FI27159054</p>
-    </section>
-    <footer>
-        <p>&copy; 2024 Second Order. All Rights Reserved.</p>
-    </footer>
+    </div>
+    
 </body>
 </html>
