--- a/index.html
+++ b/index.html
@@ -11,25 +11,27 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh; /* Full viewport height */
         }
 
         .container {
             max-width: 800px;
-            margin: 50px auto;
             padding: 0 20px;
+            text-align: center;
         }
 
         h1 {
             font-size: 36px;
-            text-align: center;
             margin-bottom: 30px;
         }
 
         p {
             font-size: 18px;
             line-height: 1.6;
-            text-align: center;
+            margin-bottom: 20px;
         }
 
         a {
@@ -44,13 +46,10 @@
     </style>
 </head>
 <body>
-    
     <div class="container">
-        <p>VSecond Order Oy
-PL4, 00521 Helsinki​
-contact@secondorder.com
-VAT FI27159054</p>
+        <h1>Welcome to Second Order</h1>
+        <p>Visit our website <a href="https://www.secondorder.com/">here</a>.</p>
+        <p>Second Order Oy<br>PL4, 00521 Helsinki<br>contact@secondorder.com<br>VAT FI27159054</p>
     </div>
-    
 </body>
 </html>
