--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Second Order Website</title>
+    <title>Second Order</title>
     <style>
         body {
             background-color: #1a1a1a; /* Dark background color */
@@ -47,8 +47,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to Second Order</h1>
-        <p>Visit our website <a href="https://www.secondorder.com/">here</a>.</p>
+        <h1>Second Order</h1>
         <p>Second Order Oy<br>PL4, 00521 Helsinki<br>contact@secondorder.com<br>VAT FI27159054</p>
     </div>
 </body>
