--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>
     <div class="container">
         <h1>Second Order</h1>
-        <p>Second Order Oy<br>PL4, 00521 Helsinki<br>contact@secondorder.com<br>VAT FI27159054</p>
+        <p>Contact <br>PL4, 00521 Helsinki<br>contact@secondorder.com<br>VAT FI27159054</p>
     </div>
 </body>
 </html>
