--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 </head>
 <body>
     <div class="container">
+        <img src="logo.webp">
         <h1>Second Order</h1>
         <p>Contact <br>PL4, 00521 Helsinki<br>contact@secondorder.com<br>VAT FI27159054</p>
     </div>
