--- a/index.html
+++ b/index.html
@@ -43,12 +43,19 @@
         a:hover {
             color: #ffffff; /* Hover color */
         }
+
+        img {
+            display: block;
+            margin: 0 auto; /* Center the image */
+            max-width: 80%; /* Set maximum width to 80% of container */
+            height: auto; /* Maintain aspect ratio */
+            margin-bottom: 20px; /* Add some space below the image */
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <img src="logo.webp">
-        <h1>Second Order</h1>
         <p>Contact <br>PL4, 00521 Helsinki<br>contact@secondorder.com<br>VAT FI27159054</p>
     </div>
 </body>
