--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
     <div class="container">
         <img src="logo.webp">
-        <p>Contact <br>PL4, 00521 Helsinki<br>contact@secondorder.com<br>VAT FI27159054</p>
+        <p>Second Order <br>PL4, 00521 HELSINKI, Finland <br>contact@secondorder.com<br>VAT FI27159054</p>
     </div>
 </body>
 </html>
